change views and flow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <header>
+      <%= render 'layouts/main_nav_bar' %>
+    </header>
     <%= yield %>
   </body>
 </html>
