--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,59 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<br><br>
+<div class="container-fluid well container-md-6" id="profile-container">
+  <div class="row">
+    <div class="col-sm-2 col-md-2" id="user-photo">
+      <%= image_tag("avatar.jpg", class: "img-circle", size: "140x140") %>
+    </div>
+    <div class="col-sm-2 col-md-3" id="user-photo">
+      <h3 class="h3-user">Welcome <%= @user.name %></h3>
+      <h5><b>Email:</b> <%= @user.email %></h5>
+      <h5><b>Rol:</b> <%= @user.rol %></h5>
+      <h5><b>Since:</b> <%= @user.created_at.strftime("%d/%m/%Y") %></h5>
+    </div>
 
-<p>
-  <strong>Rol:</strong>
-  <%= @user.rol %>
-</p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+    <div class="col-sm-2 col-md-2" id="user-action">
+      <div class="btn-group">
+        <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#">
+          Options
+          <span class="icon-cog icon-white"></span><span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><%=link_to 'Edit Profile', edit_user_path(@user)%></li>
+          <li><%=link_to 'Delete Account', user_path(@user), method: 'delete'%></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid well container-md-6" id="news-container">
+  <div class="row">
+    <div class="col-sm-2 col-md-9 user-news-title">
+      <h3>Your Courses</h3>
+    </div>
+    <div class="col-sm-2 col-md-2 user-news-action">
+      <%= link_to 'Add Courses', new_course_path, :class=>"seen-button btn btn-primary" %>
+    </div>
+  </div>
+
+</div>
+
+
+<div class="container-fluid well container-md-6" id="series-container">
+      <h3>Your Series</h3>
+      <ul class="user-serie">
+        <% @user.course.each do | course | %>
+            <div class="row user-serie-row">
+              <div class="col-sm-2 col-md-3">
+                <li><%= link_to course.name, course_path(course) %></li>
+              </div>
+              <div class="col-sm-2 col-md-3" >
+                <%= image_tag(serie.image, class: "img-rounded", size: "200x200") %>
+              </div>
+            </div>
+        <% end %>
+      </ul>
+</div>
