--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,10 @@
         <ul class="dropdown-menu">
           <li><%=link_to 'Edit Profile', edit_user_path(@user)%></li>
           <li><%=link_to 'Delete Account', user_path(@user), method: 'delete'%></li>
+          <%if current_user.admin?%>
+            <li><%=link_to 'New news', new_news_path%></li>
+            <!--Arreglar esta parte para que solo los admin puedan subir noticias-->
+          <%end%>
         </ul>
       </div>
     </div>
@@ -49,10 +53,7 @@
             <div class="row user-serie-row">
               <div class="col-sm-2 col-md-3">
                 <li><%= link_to course.name, course_path(course) %></li>
-              </div>
-              <div class="col-sm-2 col-md-3" >
-                <%= image_tag(serie.image, class: "img-rounded", size: "200x200") %>
-              </div>
+              </div> 
             </div>
         <% end %>
       </ul>
