now can select class

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,7 +42,14 @@
       <%= link_to '+', new_course_path, :class=>"seen-button btn btn-primary" %>
     </div>
   </div>
-
+  <div class="row">
+    <div class="col-sm-2 col-md-9 user-news-title">
+      <h3>Agregar curso</h3>
+    </div>
+    <div class="col-sm-2 col-md-2 user-news-action">
+      <%= link_to '+', addcourse_path, :class=>"seen-button btn btn-primary" %>
+    </div>
+  </div>
 </div>
 
 
